--- a/Talking hard drive Stats.csproj
+++ b/Talking hard drive Stats.csproj
@@ -13,7 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\HP\OneDrive\Software\C# Projects\Talking Hard Drive Monitor\</PublishUrl>
+    <PublishUrl>M:\Software\C# Projects\Talking Hard Drive Monitor\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -23,7 +23,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>16</ApplicationRevision>
+    <ApplicationRevision>17</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -55,10 +55,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>66D973F713C66B895D9F881089A534E98B5F6D0B</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>0FF52ED907FEE6D6F88B206CE7131A577B9BE72D</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>Talking hard drive Stats_2_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>Talking hard drive Stats_4_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -78,6 +78,7 @@
     <None Include="App.config" />
     <None Include="Talking hard drive Stats_1_TemporaryKey.pfx" />
     <None Include="Talking hard drive Stats_2_TemporaryKey.pfx" />
+    <None Include="Talking hard drive Stats_4_TemporaryKey.pfx" />
     <None Include="Talking hard drive Stats_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
